--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "dotenv": "^16.0.3",
+    "framer-motion": "^9.0.4",
     "material-icons": "^1.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
