--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
     "yup": "^1.0.0"
@@ -26,6 +27,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.0",
     "@vitejs/plugin-react": "^3.1.0",
