--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.3.3",
     "dotenv": "^16.0.3",
     "framer-motion": "^9.1.7",
     "material-icons": "^1.13.1",
+    "re-carousel": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
@@ -20,11 +22,13 @@
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
+    "swiper": "^9.1.0",
     "uuid": "^9.0.0",
     "yup": "^1.0.0"
   },
   "devDependencies": {
     "@hookform/resolvers": "^2.9.11",
+    "@types/re-carousel": "^2.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-toastify": "^4.1.0",
