:hammer: Fix change advertiserPage and others editions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "Login", "Register"],
+  "include": ["src", "Login", "Register","Home", "AdvertiserPage"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
